fix responsive elements.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,7 @@ nav ul a {
 nav .brand-logo {
     color: black;
     font-family: 'Pacifico', cursive;
+    padding-left: 10px;
 }
 
 .sidenav-overlay {
