--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,10 @@
 {% block content %}
 
 
-    <div id="index-banner" class="parallax-container">
-        <div class="section no-pad-bot">
+    <div id="index-banner" class="parallax-container col s12 m6">
+        
           <div class="container">
-            <br><br>
+            
             <h1 class="header center black-text text-lighten-2">Family Recipes</h1>
             <div class="row center">
               <h5 class="header col s12 light">A place to save those precious family recipes.</h5>
@@ -16,8 +16,8 @@
             <br><br>
     
           </div>
-        </div>
-        <div class="parallax"><img class="responsive-img" src="static/images/heroimage-2.png" alt="illustrated image of people with cooking utensils" style="transform: translate3d(-50%, 199.705px, 0px); opacity: 1;"></div>
+        
+        <div class="parallax"><img class="responsive-img" src="static/images/heroimage-2.png" alt="illustration of cooking utensils" style="transform: translate3d(-50%, 199.705px, 0px); opacity: 1;"></div>
     </div>
 
     <h1 class="center-align black-text">Recipes</h1>
