made full recipe image resonsive.

--- a/templates/full_recipe.html
+++ b/templates/full_recipe.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="col s12">
-                <img class="img_recipe" src="{{ recipe.recipe_img }}" alt="{{ recipe.recipe_name.capitalize() }}">
+                <img class="img_recipe responsive-img" src="{{ recipe.recipe_img }}" alt="{{ recipe.recipe_name }}">
             </div>
         </div>
 
