--- a/static/css/style.css
+++ b/static/css/style.css
@@ -85,3 +85,10 @@ main {
     font-size: 20px;
     padding: 10px;
 }
+
+@media only screen and (max-width: 992px)
+{
+nav .brand-logo {
+    padding-left: 0;
+}
+}
