--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,3 +92,14 @@ nav .brand-logo {
     padding-left: 0;
 }
 }
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+nav .brand-logo {
+    padding-left: 0;
+    font-size: 25px;
+}
+}
