Fixed glitch on landing page which allowed non logged in users to access the site recipes.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,7 @@
 
 
     
-    
+    <!-- Profile Header -->
         <div class="row">
             <div class="col s12 m8 offset-m2">
                 <div class="card-panel">
@@ -17,6 +17,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- Welcome Message and link to recipes -->
         
                 <h1 class="s12 header center black-text text-lighten-2">Welcome to Family Recipes</h1>
                 <div class="row center">
