--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-
+<!-- hero image and landing page -->
     <div id="index-banner" class="parallax-container col s12 m6">
         
           <div class="container">
@@ -22,6 +22,8 @@
 
     <h1 class="center-align black-text">Recipes</h1>
 
+    <!-- Sample recipe 1  -->
+
     <section class="recipes">
       <div class="row">
           <div class="col s12 m6 l6 xl4">
@@ -35,12 +37,11 @@
                     <p>She would happily tell you that noone made a better scone.</p>
                     <span><em>By: Anna</em></span>
                   </div>
-                  <div class="card-action btn-box center-align">
-                    <a class="full-recipe-btn teal-text text-shadow"
-                        href="{{ url_for('get_recipes') }}">Recipes</a>
-                  </div>
+                 
                 </div>
               </div>
+
+            <!-- Sample recipe 2  -->
               <div class="col s12 m6 l6 xl4">
                 <div class="card medium recipe-card">
                     <div class="card-image">
@@ -52,12 +53,11 @@
                       <p>It will keep you warm during the harshest winters.</p>
                       <span><em>By: Milly</em></span>
                     </div>
-                    <div class="card-action btn-box center-align">
-                      <a class="full-recipe-btn teal-text text-shadow"
-                          href="{{ url_for('get_recipes') }}">Recipes</a>
-                    </div>
+                    
                   </div>
                 </div>
+
+                <!-- Sample recipe 3  -->
                 <div class="col s12 m6 l6 xl4">
                   <div class="card medium recipe-card">
                       <div class="card-image">
@@ -69,10 +69,8 @@
                         <p>She worked as a waitress her whole life and had some of the best recipes. </p>
                         <span><em>By: Michelle</em></span>
                       </div>
-                      <div class="card-action btn-box center-align">
-                        <a class="full-recipe-btn teal-text text-shadow"
-                            href="{{ url_for('get_recipes') }}">Recipes</a>
-                      </div>
+                      
+                      
                     </div>
                   </div>
             </div>
