--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
                         <label for="password">Password</label>
                     </div>
                 </div>
-                <!-- register -->
+                <!-- Login Button  -->
                 <div class="row">
                     <button type="submit" class="btn waves-effect waves-light col s12 btn-large teal text-shadow">
                         Log in <i class="fas fa-sign-in-alt"></i>
@@ -33,6 +33,8 @@
             </div>
         </form>
     </div>
+
+<!-- register -->   
 
     <div class="row">
         <div class="col s12">
