--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -3,15 +3,15 @@
 
     
 
-  <div class="row">
+    <div class="row">
         <div class="col s12 m8 offset-m2">
-          
-            
-                <h1 class="center-align white black-text">
-                    All Recipes
-                </h1>
-              </div>
-            </div>
+            <h1 class="center-align white black-text">
+                        All Recipes
+            </h1>
+        </div>
+    </div>
+
+    <!-- Search area -->
 
             <div class="row card-panel grey lighten-5">
                 <form action="{{ url_for('search') }}" method="post" class="col s12">
@@ -30,6 +30,8 @@
                     </div>
                 </form>
             </div>
+
+<!-- Recipes -->
 
             {% if recipes|length > 0 %}
             <section class="recipes">
@@ -64,7 +66,7 @@
         {% else %}
             <div class="row no-results-row valign-wrapper">
                 <div class="col s12">
-                    <h3 class="center-align no-results-heading">No Result Found. Perhaps you can add one!<span>🤔</span></h3>
+                    <h3 class="center-align no-results-heading">No Result Found. Perhaps you can add one!</h3>
                 </div>
             </div>
         {% endif %}
