--- a/templates/register.html
+++ b/templates/register.html
@@ -15,7 +15,7 @@
 						<label for="username">Username</label>
 					</div>
                 </div>
-                <!-- passowrd -->
+                <!-- password -->
                 <div class="row">
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix teal-text"></i>
@@ -33,6 +33,8 @@
             </div>
         </form>
     </div>
+
+     <!-- Link to login if already registered -->
 
     <div class="row">
         <div class="col s12">
