--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -38,7 +38,7 @@
                 <div class="row">
                     {% for recipe in recipes %}
                             <div class="col s12 m6 l6 xl4">
-                                <div class="card large recipe-card">
+                                <div class="card large recipe-card hoverable">
                                     <div class="card-image">
                                         {% if recipe.recipe_img %}
                                             <img src="{{ recipe.recipe_img }}" alt="{{ recipe.recipe_name }}">
