--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -86,6 +86,8 @@
                     </div>
                 </div>
             </div>  
+
+        <!-- Submit button  -->
         <div class="row">
             <div class="col s12 center-align">
                 <button class="btn waves-effect waves-light btn-large" type="submit">Submit
