--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,8 @@
     </ul>
 </header>
 
+<!-- Flash messages  -->
+
 <section>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -70,6 +72,8 @@
 
 {% block content %}
     {% endblock %}
+
+    <!-- footer  -->
 
 <footer class="page-footer sticky teal">
     <div class="container">
