--- a/templates/profile.html
+++ b/templates/profile.html
@@ -25,9 +25,11 @@
                   <h5 class="header col s12 light">A place to save those precious family recipes.</h5>
                 </div>
                 <div class="row">
-                  <div class="center-align s12">
+                  <div class="center-align s6">
                     <a href="{{ url_for('get_recipes') }}" class="center-align waves-effect waves-light btn-large">
                       <i class="far fa-edit"></i> Recipes</a>
+                      <a href="{{ url_for('add_recipe') }}" class="center-align waves-effect waves-light pink btn-large">
+                        <i class="fas fa-plus"></i> Add Recipe</a>
                   </div>
                 </div>
 
