formatted hero image.

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -48,7 +48,7 @@
                 <i class="fas fa-camera-retro prefix"></i>
                 <input id="recipe_img" name="recipe_img" maxlength="5000"
                     type="url" class="validate" aria-describedby="recipe_img" pattern="https?://.+" onchange="recipeImg();">
-                <label for="recipe_img">Recipe Image <em>Copy and paste image url or use our default image by skipping this step</em></label>
+                <label for="recipe_img">Recipe Image <em>Copy and paste image url or skip step to use default image.</em></label>
             </div>
         </div>
 
