--- a/templates/base.html
+++ b/templates/base.html
@@ -85,13 +85,13 @@
         <div class="col l4 offset-6 s12 center-align">
             <h5 class="social-headingt">Social Links</h5>
                 <div class="social-box">
-                    <a class="social-links" href="https://www.facebook.com/" target="_blank"><i
+                    <a class="social-links" href="https://www.facebook.com/" target="_blank" rel="noopener"><i
                         class="fab fa-facebook"></i></a>
-                    <a class="social-links" href="https://www.instagram.com/" target="_blank"><i
+                    <a class="social-links" href="https://www.instagram.com/" target="_blank" rel="noopener"><i
                         class="fab fa-instagram"></i></a>
-                    <a class="social-links" href="https://twitter.com/?lang=en-gb" target="_blank"><i
+                    <a class="social-links" href="https://twitter.com/?lang=en-gb" target="_blank" rel="noopener"><i
                         class="fab fa-twitter"></i></a>
-                    <a class="social-links" href="https://wechat.com/?lang=en-gb" target="_blank"><i 
+                    <a class="social-links" href="https://wechat.com/?lang=en-gb" target="_blank" rel="noopener"><i 
                         class="fab fa-weixin"></i></a>
                 </div>
         </div>
