--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -11,7 +11,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-file-signature prefix"></i>
                     <input id="recipe_name" name="recipe_name" type="text" class="validate" 
-                        minlength="5" maxlength="50" value="{{ recipe.recipe_name }}" required>
+                        minlength="5" maxlength="50" value="{{ recipe.recipe_name }}" pattern="^[^\s][a-zA-Z0-9]{5,15}$" required>
                     <label for="recipe_name">Recipe Name:</label>
                 </div>
             </div>
@@ -22,7 +22,7 @@
         <div class="input-field col s12">
             <i class="fas fa-heart prefix"></i>
             <textarea id="recipe_description" name="recipe_description" minlength="5"
-                    maxlength="500" class="materialize-textarea validate" required></textarea>
+                    maxlength="500" class="materialize-textarea validate" pattern="^[^\s][a-zA-Z0-9]{5,15}$" required></textarea>
             <label for="recipe_description">Description:</label>
         </div>
     </div>
@@ -67,7 +67,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-clipboard-list prefix"></i>
                     <textarea id="recipe_ingredients" name="recipe_ingredients" minlength="5"
-                            maxlength="500" class="materialize-textarea validate" required>
+                            maxlength="500" class="materialize-textarea validate" pattern="^[a-zA-Z0-9]{5,15}$" required>
                         {{- recipe.recipe_ingredients -}}
                     </textarea>
                     <label for="recipe_ingredients">Ingredients:</label>
@@ -79,7 +79,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-mortar-pestle prefix"></i>
                     <textarea id="recipe_method" name="recipe_method" minlength="5"
-                            maxlength="500" class="materialize-textarea validate" required>
+                            maxlength="500" class="materialize-textarea validate" pattern="^[^\s][a-zA-Z0-9]{5,15}$" required>
                         {{- recipe.recipe_method -}}   
                     </textarea>
                     <label for="recipe_method">Method:</label>
