Add schema to testing folder for README.

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
 
 <footer class="page-footer sticky teal">
     <div class="container">
-      <div class="row">
+        <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text brand-logo">Family Recipes</h5>
           <p class="grey-text text-lighten-4">A place to save those precious family recipes.</p>
@@ -94,9 +94,10 @@
                     <a class="social-links" href="https://wechat.com/?lang=en-gb" target="_blank" rel="noopener"><i 
                         class="fab fa-weixin"></i></a>
                 </div>
+            </div>
         </div>
-        
-    </footer>
+    </div>
+</footer>
 
     
 
