--- a/templates/full_recipe.html
+++ b/templates/full_recipe.html
@@ -55,7 +55,7 @@
                 
                 {% if session.user|lower == recipe.created_by|lower %}
                     <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="center-align waves-effect waves-light btn-large"><i class="far fa-edit"></i> Edit</a>
-                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="right waves-effect waves-light red btn-large"><i class="far fa-trash-alt"></i> Delete</a>
+                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="center-align waves-effect waves-light red btn-large"><i class="far fa-trash-alt"></i> Delete</a>
                     
                 {% endif %}
             </div>
