--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -67,7 +67,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-clipboard-list prefix"></i>
                     <textarea id="recipe_ingredients" name="recipe_ingredients" minlength="5"
-                            maxlength="500" class="materialize-textarea validate" pattern="^[a-zA-Z0-9]{5,15}$" required>
+                            maxlength="500" class="materialize-textarea validate" required>
                         {{- recipe.recipe_ingredients -}}
                     </textarea>
                     <label for="recipe_ingredients">Ingredients:</label>
@@ -79,7 +79,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-mortar-pestle prefix"></i>
                     <textarea id="recipe_method" name="recipe_method" minlength="5"
-                            maxlength="500" class="materialize-textarea validate" pattern="^[^\s][a-zA-Z0-9]{5,15}$" required>
+                            maxlength="500" class="materialize-textarea validate" required>
                         {{- recipe.recipe_method -}}   
                     </textarea>
                     <label for="recipe_method">Method:</label>
