--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -13,13 +13,13 @@
 
     <!-- Search area -->
 
-            <div class="row card-panel grey lighten-5">
+            <div class="row card-panel white lighten-5">
                 <form action="{{ url_for('search') }}" method="post" class="col s12">
                     <div class="row valign-wrapper center-align">
                         <div class="input-field col s12 m8">
                             <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
-                            <input type="text" name="query" id="query" minlength="3" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                            <label for="query">Search Tasks</label>
+                            <input type="text" name="query" id="query" minlength="1" class="validate" required>
+                            <label for="query">Search recipe by name or ingredient</label>
                         </div>
                         <div class="col s12 m4">
                             <a href="{{ url_for('get_recipes') }}" class="pink btn text-shadow">Reset</a>
