Fixed function to print gluten free or contains gluten.

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -78,8 +78,8 @@
         
         <div class="input-field col s12">
             <i class="fas fa-bread-slice prefix"></i>
-                <label for="is_not_gluten_free">
-                    <input type="checkbox" id="is_not_gluten_free" name="is_not_gluten_free">
+                <label for="gluten_free">
+                    <input type="checkbox" id="gluten_free" name="gluten_free">
                     <span class="checkbox">Is gluten free.</span>
                 </label>
             </div>
