--- a/templates/full_recipe.html
+++ b/templates/full_recipe.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="col s12">
-                <img class="img_recipe responsive-img" src="{{ recipe.recipe_img }}" alt="{{ recipe.recipe_name }}">
+                <img class="img_recipe responsive-img" src="{{ recipe.recipe_img }}" alt="Recipe image" onerror="this.src='static/images/default.jpg'">
             </div>
         </div>
 
@@ -37,8 +37,8 @@
 
             <!-- Gluten free note -->
             <div class="col s12">
-                <h4 class="teal-text"><strong>Is Gluten Free</strong> : {{ recipe.is_not_gluten_free }}</h4>
-                {% if recipe.is_not_gluten_free == "on" %}
+                <strong class="teal-text">{{ recipe.gluten_free }}</strong>
+                {% if recipe.gluten_free == "on" %}
                     <i class="fas fa-exclamation-circle light-blue-text text-lighten-2 tooltipped"
                         data-position="right" data-tooltip="URGENT!"></i>
                 {% endif %}
