--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -11,7 +11,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-file-signature prefix"></i>
                     <input id="recipe_name" name="recipe_name" type="text" class="validate" 
-                        minlength="5" maxlength="50" value="{{ recipe.recipe_name }}" pattern="^[^\s][a-zA-Z0-9]{5,15}$" required>
+                        minlength="5" maxlength="50" value="{{ recipe.recipe_name }}" pattern="^[A-Za-z ][A-Za-z0-9!@#$%^&* ]*$" required>
                     <label for="recipe_name">Recipe Name:</label>
                 </div>
             </div>
@@ -89,16 +89,16 @@
     <!--Gluten Free Switch-->
             
                     <div class="input-field col s12">
-                        <div class="switch">
+                        <div class="checkbox">
                             <i class="fas fa-bread-slice prefix"></i>
                                     <label for="is_not_gluten_free">
-                        {% if recipe.is_not_gluten_free == "on" %}
-                            <input type="checkbox" id="is_not_gluten_free" name="is_not_gluten_free" checked>
+                        {% if recipe.gluten_free == "on" %}
+                            <input type="checkbox" id="gluten_free" name="gluten_free" checked>
                         {% else %}
-                            <input type="checkbox" id="is_not_gluten_free" name="is_not_gluten_free">
+                            <input type="checkbox" id="gluten_free" name="gluten_free">
                         {% endif %}
-                            <span class="lever"></span>
-                            Is not gluten free.
+                        <span class="checkbox"></span>
+                        Is not gluten free.
                             </label>
                         </div>
                     </div>
