--- a/templates/full_recipe.html
+++ b/templates/full_recipe.html
@@ -13,11 +13,12 @@
         <div class="row">
             <div class="col s12">
                 <h5><strong>Category: {{ recipe.category_name.capitalize() }}</strong></h5>
+                <h6><strong>Description: {{ recipe.recipe_description }}</strong></h6>
                 <h6><strong>Created by: {{ recipe.created_by.capitalize() }}</strong></h6>
             </div>
 
             <div class="col s12">
-                <img class="img_recipe responsive-img" src="{{ recipe.recipe_img }}" alt="Recipe image" onerror="this.src='static/images/default.jpg'">
+                <img class="img_recipe responsive-img" src="{{ recipe.recipe_img }}" alt="Recipe image" onerror="this.src='/static/images/default.jpg'">
             </div>
         </div>
 
