--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -22,7 +22,10 @@
         <div class="input-field col s12">
             <i class="fas fa-heart prefix"></i>
             <textarea id="recipe_description" name="recipe_description" minlength="5"
-                    maxlength="500" class="materialize-textarea validate" pattern="^[^\s][a-zA-Z0-9]{5,15}$" required></textarea>
+                    maxlength="500" class="materialize-textarea validate" pattern="^[^\s][a-zA-Z0-9]{5,15}$" required>
+                    
+                    {{- recipe.recipe_description -}} 
+                </textarea>
             <label for="recipe_description">Description:</label>
         </div>
     </div>
