--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -108,14 +108,14 @@
                 </div>  
 
     <!--buttons-->
-            <div class="row">
-                <div class="col s12 center-align">
-                    <button class="btn waves-effect waves-light btn-large" type="submit">Edit
-                        <i class="fas fa-edit right"></i>
-                    </button>
-                            
-                </div>
-            </div>
+    <div class="row">
+        <div class="col s12 center-align">
+            <button class="btn waves-effect waves-light btn-large" type="submit">Submit
+                <i class="fas fa-paper-plane right"></i>
+              </button>
+                    
+        </div>
+    </div>
         </form>
     </div>
 
