--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -88,7 +88,7 @@
         <!-- Submit button  -->
         <div class="row">
             <div class="col s12 center-align">
-                <button class="btn waves-effect waves-light btn-large" type="submit">Submit
+                <button class="btn waves-effect waves-light btn-large" type="submit" action="{{ url_for('full_recipe') }}">Submit
                     <i class="fas fa-paper-plane right"></i>
                   </button>
                         
