--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -99,9 +99,11 @@
                             <input type="checkbox" id="gluten_free" name="gluten_free" checked>
                         {% else %}
                             <input type="checkbox" id="gluten_free" name="gluten_free">
-                        {% endif %}
+                        
                         <span class="checkbox"></span>
                         Is not gluten free.
+                        {% endif %}
+
                             </label>
                         </div>
                     </div>
@@ -111,7 +113,8 @@
     <div class="row">
         <div class="col s12 center-align">
             <button class="btn waves-effect waves-light btn-large" type="submit">Submit
-                <i class="fas fa-paper-plane right"></i>
+                <i class="fas fa-paper-plane right"><a class="full-recipe-btn teal-text text-shadow"
+                                            href="{{ url_for('full_recipe', recipe_id=recipe._id) }}">Full Recipe</a></i>
               </button>
                     
         </div>
