removed link from btn in edit and add recipee.

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -113,8 +113,7 @@
     <div class="row">
         <div class="col s12 center-align">
             <button class="btn waves-effect waves-light btn-large" type="submit">Submit
-                <i class="fas fa-paper-plane right"><a class="full-recipe-btn teal-text text-shadow"
-                                            href="{{ url_for('full_recipe', recipe_id=recipe._id) }}">Full Recipe</a></i>
+                <i class="fas fa-paper-plane right">Full Recipe</i>
               </button>
                     
         </div>
