--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -112,8 +112,8 @@
     <!--buttons-->
     <div class="row">
         <div class="col s12 center-align">
-            <button class="btn waves-effect waves-light btn-large" type="submit">Submit
-                <i class="fas fa-paper-plane right">Full Recipe</i>
+            <button class="btn waves-effect waves-light btn-large" type="submit">Edit
+                <i class="fas fa-paper-plane right"></i>
               </button>
                     
         </div>
